--- a/accounts/templates/accounts/companyMainPage.html
+++ b/accounts/templates/accounts/companyMainPage.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <a href="{% url 'setTime' %}" class="set-time-companies">set time</a>
-<a href="{% url 'mem_signup' %}" class="main-page-links">Member sign-up(only by companies)</a>
+<a href="{% url 'mem_signup' %}" class="main-page-links">Sign up your members</a>
 
 <div class="main-user-list">
     <h1>Users</h1>
