--- a/accounts/templates/accounts/base.html
+++ b/accounts/templates/accounts/base.html
@@ -25,7 +25,11 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 ">
-              {% if request.user.is_authenticated %}
+              {% if request.user.is_authenticated and request.user.is_superuser %}
+                <li class="nav-item">
+                  <a class="nav-link active" href="#">Admin: {{ request.user }}</a>
+                </li>
+              {% elif request.user.is_authenticated %}
                 <li class="nav-item">
                   <a class="nav-link active" href="#">{{ request.user }}</a>
                 </li>
