--- a/accounts/templates/accounts/workTimeCreate.html
+++ b/accounts/templates/accounts/workTimeCreate.html
@@ -5,9 +5,8 @@
 {% block content %}
 <form method="POST" class="form-group">
     {% csrf_token %}
-    <!-- {{ form.as_p }} -->
-    {{ request.user }}
     <div id="qr-reader" style="width: 600px"></div>
     <button type="submit" class="btn btn-success">Register</button>
 </form>
+{{ workTime }}
 {% endblock %}
