--- a/accounts/templates/accounts/companyMainPage.html
+++ b/accounts/templates/accounts/companyMainPage.html
@@ -17,7 +17,7 @@
         <div class="alert alert-warning mt-5 user-from-list fs-5 text-muted col">
             <p>Username: {{ each.member }}</p>
             <p style="text-transform: capitalize;">{{ each.member.first_name }} {{ each.member.last_name }}</p>
-            <a href="{% url 'userWorktime' id=each.member.id %}" class="btn btn-primary">See stats</a>
+            <a href="{% url 'userWorktime' user=each.member %}" class="btn btn-primary">See stats</a>
             <a href="{% url 'changeUser' id=each.member.id %}" class="btn btn-warning">Change user</a>
             <a href="{% url 'deleteUser' id=each.member.id %}" class="btn btn-danger">Delete user</a>
         </div>
