--- a/accounts/templates/accounts/home.html
+++ b/accounts/templates/accounts/home.html
@@ -4,7 +4,7 @@
 {% block content %}
 <h1 class="main-page-text">Are you a Company or Member of a company?</h1>
 <div class="home-page-main">
-    <a href="{% url 'login' %}" class="main-member home-page-main-content">Login</a>
-    <a href="{% url 'comp_signup' %}" class="main-company home-page-main-content">Sign up your Company</a>
+    <a href="{% url 'login' %}" class="main-member home-page-main-content" style="background-color: #FFF4A3;">Login</a>
+    <a href="{% url 'comp_signup' %}" class="main-company home-page-main-content" style="background-color: #96D4D4;">Sign up your Company</a>
 </div>
 {% endblock %}
