--- a/accounts/templates/accounts/userMainPage.html
+++ b/accounts/templates/accounts/userMainPage.html
@@ -14,7 +14,7 @@
         <a href="{% url 'createWorkTime' %}">Scan</a>
     </div>
     <div class="main-stats">
-        <a href="{% url 'seeUserStats' %}">моя статистика</a>
+        <a href="{% url 'seeUserStats' page=1 %}">моя статистика</a>
     </div>
     <div class="footer"> <p>v.0.0.1</p> </div>
 </div>
