qr scaner logic added

--- a/accounts/templates/accounts/companyMainPage.html
+++ b/accounts/templates/accounts/companyMainPage.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="main-company-page-interact">
-    <a href="{% url 'setTime' %}" class="set-time-companies btn btn-primary">set time</a>
+    <a href="{% url 'setTime' %}" class="set-time-companies btn btn-primary">set time and your private key (important)</a>
     <a href="{% url 'mem_signup' %}" class="set-time-companies btn btn-primary">Sign up your members</a>
 </div>
 
