--- a/accounts/templates/accounts/companySetTime.html
+++ b/accounts/templates/accounts/companySetTime.html
@@ -13,6 +13,10 @@
         <label>end time</label>
         <input type="time" class="form-control" name="end_time"/>
     </div>
+    <div class="mb-3">
+        <label>secret key</label>
+        <input type="text" class="form-control" name="secret_key"/>
+    </div>
     <button type="submit" class="btn btn-primary">Submit</button>
 </form>
 {% endblock %}
