--- a/accounts/templates/accounts/base.html
+++ b/accounts/templates/accounts/base.html
@@ -75,5 +75,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/html5-qrcode@2.0.9/dist/html5-qrcode.min.js"></script>
     <script src="{% static 'js/index.js' %}"></script>
+    <script src="{% static 'js/on_time.js' %}"></script>
 </body>
 </html>
