--- a/static/css/style.css
+++ b/static/css/style.css
@@ -169,3 +169,40 @@ a {
     font-size: calc(1.275rem + .3vw); 
     color: black;
 }
+.user-attendance {
+    display: flex;
+    justify-content: space-around;
+
+}
+.user-stat-line {
+    width: 100%;
+    margin-bottom: 10px;
+    background-color: black;
+    height: 3px;
+    display: flex;
+    justify-content: space-between;
+}
+#on_time_line {
+    background-color: green;
+    height: 3px;
+    /* width: 70%; */
+}
+#late_line {
+    background-color: red;
+    height: 3px;
+    /* width: 30%; */
+}
+.title-user-stat {
+    text-align: center;
+    margin-bottom: 10px;
+}
+.dateFormMain {
+    margin-top: 30px;
+    width: 50%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+}
+.dateFormMain input {
+    margin-left: 10px;
+}
